src/strucvars/eval/dup/snapshots/scarus__strucvars__eval__dup__section2__test__handle_cases_2h_2l@COL3A1-2I-pos-1.snap
---
source: src/strucvars/eval/dup/section2.rs
expression: res
---
- g2:
    g2_i:
      suggested_score: 0.9
      pvs1_result: pvs1
      hi_genes:
        - hgnc_id: "HGNC:2201"
          hgnc_symbol: COL3A1
          ensembl_gene_id: ENSG00000168542
          ncbi_gene_id: "1281"

