src/strucvars/eval/dup/snapshots/scarus__strucvars__eval__dup__section2__test__handle_cases_2h_2l@REV3L-2L-pos-1.snap
---
source: src/strucvars/eval/dup/section2.rs
expression: res
---
- g2:
    g2l:
      suggested_score: 0.45
      genes:
        - hgnc_id: "HGNC:9968"
          hgnc_symbol: REV3L
          ensembl_gene_id: ENSG00000009413
          ncbi_gene_id: "5980"

